Fix for submodule url

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "deps/usher"]
 	path = deps/usher
-	url = git@github.com:matsengrp/usher.git
+	url = https://github.com/matsengrp/usher.git
 	branch = fix-change-walker
