Added manual trigger

--- a/.github/workflows/build-larch-macos.yml
+++ b/.github/workflows/build-larch-macos.yml
@@ -2,6 +2,9 @@ name: Build larch on macOS
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - fix-macos-build
 
 jobs:
   build-larch-macos:
