--- a/.github/workflows/build-larch-macos.yml
+++ b/.github/workflows/build-larch-macos.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           miniconda-version: latest
           activate-environment: larch-dev
-          environment-file: environment-dev.yml
+          environment-file: environment-dev-macos.yml
           channels: conda-forge,bioconda
           auto-activate-base: false
 
