--- a/.github/workflows/build-larch-macos.yml
+++ b/.github/workflows/build-larch-macos.yml
@@ -29,7 +29,7 @@ jobs:
         shell: bash -el {0}
         run: |
           mkdir build && cd build
-          cmake -DCMAKE_BUILD_TYPE=Debug -DUSE_USHER=no -DProtobuf_ROOT=$CONDA_PREFIX ..
+          cmake -DCMAKE_BUILD_TYPE=Debug -DUSE_USHER=no -DUSE_SYSTEM_TBB=yes -DProtobuf_ROOT=$CONDA_PREFIX ..
 
       - name: Build (make step)
         shell: bash -el {0}
