Fix for c++ std

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -311,7 +311,7 @@ endif()
 # set larch compiler options
 function(larch_compile_opts PRODUCT)
   if(USE_NETAM)
-    target_compile_options(${PRODUCT} PUBLIC -march=native -std=c++23 -pipe)
+    target_compile_options(${PRODUCT} PUBLIC -march=native -std=c++2b -pipe)
   else()
     target_compile_options(${PRODUCT} PUBLIC -march=native -std=c++20 -pipe)
   endif()
@@ -472,7 +472,7 @@ if(USE_NETAM)
   target_include_directories(netam PUBLIC include)
   target_include_directories(netam PUBLIC ${CMAKE_CURRENT_BINARY_DIR}/deps/range-v3/install/include)
   add_dependencies(netam range-v3)
-  target_compile_options(netam PUBLIC -std=c++23 -Wno-unknown-warning-option)
+  target_compile_options(netam PUBLIC -std=c++2b -Wno-unknown-warning-option)
   target_compile_options(netam PRIVATE -Wall -Wextra -pedantic)
   target_link_libraries(netam PUBLIC fmt::fmt)
   target_link_libraries(netam PUBLIC ${TORCH_LIBRARIES})
@@ -489,7 +489,7 @@ if(USE_USHER)
     src/usher_globals.cpp
   )
   if(USE_NETAM)
-    target_compile_options(usher PRIVATE -march=native -std=c++23 -w -fno-omit-frame-pointer -DUSE_USHER)
+    target_compile_options(usher PRIVATE -march=native -std=c++2b -w -fno-omit-frame-pointer -DUSE_USHER)
   else()
     target_compile_options(usher PRIVATE -march=native -std=c++20 -w -fno-omit-frame-pointer -DUSE_USHER)
   endif()
