--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -567,6 +567,7 @@ larch_executable(larch-test
   test/test_ml_spr.cpp
   test/test_s5f_likelihood.cpp
   test/test_sankoff.cpp
+  test/test_random_optimize.cpp
 )
 target_compile_options(larch-test PRIVATE ${STRICT_WARNINGS})
 
