--- a/.github/workflows/build-larch-macos-netam.yml
+++ b/.github/workflows/build-larch-macos-netam.yml
@@ -29,7 +29,7 @@ jobs:
         shell: bash -el {0}
         run: |
           mkdir build && cd build
-          cmake -DCMAKE_BUILD_TYPE=Debug -DUSE_USHER=no -DUSE_SYSTEM_TBB=yes -DUSE_NETAM=yes -DProtobuf_ROOT=$CONDA_PREFIX -DCMAKE_POLICY_VERSION_MINIMUM=3.5 ..
+          cmake -DCMAKE_BUILD_TYPE=Debug -DUSE_USHER=yes -DUSE_SYSTEM_TBB=yes -DUSE_NETAM=yes -DProtobuf_ROOT=$CONDA_PREFIX -DCMAKE_POLICY_VERSION_MINIMUM=3.5 ..
 
       - name: Build (make step)
         shell: bash -el {0}
